2015-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/pdftex.am, am/pdftosrc.am, am/ttf2afm.am: Dependencies for
	'make check'.

2015-07-02  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* utils.c: Moved convertStringToHexString() and getmd5sum()
	from here to ../lib/texmfmp.c.

2015-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.defines, ptexlib.h, pdftex.web, utils.c: Sync with
	upstream r724.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/pdftex.am: Use $(tie_c).

2015-03-07  Karl Berry  <karl@tug.org>

	* NEWS,
	* pdftex_version.h,
	* pdftex.web (pdftex_revision, pdftex_version_string): [1.40.]16
	for TL'15.

2015-02-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writejpg.c: support JPEG Exif in addition to JFIF.
	(borrowed from dvipdfm-x).

2014-12-12  Karl Berry  <karl@gnu.org>

	* pdftoepdf.cc (read_pdf_info): do not even warn if
	pdf_inclusion_errorlevel (aka \pdfinclusionerrorlevel) is negative.
	Discussed with Thanh, 31 May 2011 10:17:35.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* regex/regcomp.c [WIN64]: Use __int64 (not long) as intptr_t.

2014-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writepng.c: Avoid PNG warnings.

2014-06-26  Thanh Han The  <thanh@river-valley.org>

	* pdftoepdf.cc: Put a line-ending character after writing a group dict.
	(Report from Ross Moore on pdftex list,
	http://tug.org/pipermail/pdftex/2014-June/008911.html)

2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mapfile.c, tounicode.c, writet1.c, writettf: Avoid undefined
	behaviour when char is signed.

2014-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ttf2afm.c: Avoid undefined behaviour when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftosrc.cc: Adapt to xpdf-3.04.

2012-05-20  Thanh Han The  <thanh@river-valley.org>

	* pdftex.web: do not try to avoid printing 0 0 Td.
	E.g., \rlap fails.
	(Report from Heiko on pdftex list, 21 May 2014 22:11:21.)
