@@ -21,9 +21,9 @@ typedef signed char TTF_CHAR;
 typedef unsigned char TTF_BYTE;
 typedef signed short TTF_SHORT;
 typedef unsigned short TTF_USHORT;
-typedef signed long TTF_LONG;
-typedef unsigned long TTF_ULONG;
-typedef unsigned long TTF_FIXED;
+typedef int32_t TTF_LONG;
+typedef uint32_t TTF_ULONG;
+typedef uint32_t TTF_FIXED;
 typedef unsigned short TTF_FUNIT;
 typedef signed short TTF_FWORD;
 typedef unsigned short TTF_UFWORD;
